--- a/assets/less/layouts/_header.less
+++ b/assets/less/layouts/_header.less
@@ -1,1 +1,5 @@
 .banner { }
+
+header .container-fluid {
+  padding-right: 5px;
+}
